--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,7 +63,13 @@ dependencies {
     implementation "com.google.firebase:firebase-core:17.2.3"
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation "com.google.firebase:firebase-database:19.2.1"
+    implementation 'com.firebaseui:firebase-ui-auth:6.2.0'
 
+    //facebook
+    implementation 'com.facebook.android:facebook-android-sdk:6.3.0'
+
+    //twitter
+    implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
