--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,8 @@ dependencies {
     implementation "com.google.firebase:firebase-core:17.2.3"
     implementation "com.google.firebase:firebase-auth:19.2.0"
     implementation "com.google.firebase:firebase-database:19.2.1"
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.2'
+
 
 
     //play service auth
