--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,9 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation 'com.google.android.material:material:1.1.0'
+
+
     //firebase
     implementation "com.google.firebase:firebase-core:17.2.3"
     implementation "com.google.firebase:firebase-auth:19.2.0"
