--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ ext {
     //Add the playServices version
     playServices = "17.2.3"
     koin_version = "2.0.1"
+    nav_version = "2.3.0-alpha06"
 
 }
 
@@ -51,6 +52,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.2.0'
+    implementation "androidx.fragment:fragment-ktx:1.2.4"
     implementation 'androidx.lifecycle:lifecycle-runtime:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0'
@@ -73,15 +75,24 @@ dependencies {
     implementation "com.google.firebase:firebase-database:19.2.1"
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.2'
 
-    implementation "androidx.fragment:fragment-ktx:1.2.4"
-    implementation "androidx.core:core-ktx:1.2.0"
 
+    implementation 'com.github.po10cio:TimeLineView:1.0.2'
+
+    implementation 'cz.kinst.jakub:android-stateful-layout-base:2.0.7'
 
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
+    implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.5'
+
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
     //koin
     implementation "org.koin:koin-core:$koin_version"
