--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,6 @@ ext {
     //Add the playServices version
     playServices = "17.2.3"
     koin_version = "2.0.1"
-    nav_version = "2.3.0-alpha06"
 
 }
 
@@ -70,10 +69,10 @@ dependencies {
 
 
     //firebase
-    implementation "com.google.firebase:firebase-core:17.2.3"
-    implementation "com.google.firebase:firebase-auth:19.2.0"
-    implementation "com.google.firebase:firebase-database:19.2.1"
-    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.2'
+    implementation "com.google.firebase:firebase-core:17.4.1"
+    implementation "com.google.firebase:firebase-auth:19.3.1"
+    implementation "com.google.firebase:firebase-database:19.3.0"
+    implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
 
     implementation 'com.github.po10cio:TimeLineView:1.0.2'
@@ -84,14 +83,14 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //play service auth
-    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
 
     implementation 'com.github.ibrahimsn98:SmoothBottomBar:1.7.5'
 
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-fragment-ktx:2.2.2"
+    implementation "androidx.navigation:navigation-ui-ktx:2.2.2"
 
-    implementation 'com.google.zxing:core:3.2.1'
+    implementation 'com.google.zxing:core:3.3.3'
     implementation 'com.journeyapps:zxing-android-embedded:3.2.0@aar'
 
     //koin
