--- a/app/build.gradle
+++ b/app/build.gradle
@@ -74,10 +74,12 @@ dependencies {
     implementation "com.google.firebase:firebase-database:19.3.0"
     implementation 'com.google.firebase:firebase-firestore-ktx:21.4.3'
 
+    implementation 'com.mikhaellopez:circularimageview:4.2.0'
+
+    implementation 'com.github.bumptech.glide:glide:4.11.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
 
     implementation 'com.google.firebase:firebase-messaging:20.2.0'
-
-    implementation 'com.squareup.picasso:picasso:2.71828'
 
     //play service auth
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
